hard-gists/2351057/run.log
=== Docker Run Log for 2351057 ===
Started at: Mi 29. Okt 13:02:39 CET 2025

[2025-10-29 13:02:39] START: Running container for 2351057
[2025-10-29 13:02:39] SUCCESS: Container 5abbbeb241fd450134e398f99f952b1ecb851ca5de57577b4bd8723b36d4387e started for 2351057
=== Container logs for 2351057 ===
  File "/snippet.py", line 102
    print 'for alpha = ', alpha_val
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 2351057 ===
[2025-10-29 13:02:41] INFO: Container 5abbbeb241fd450134e398f99f952b1ecb851ca5de57577b4bd8723b36d4387e has stopped
